--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,4 +12,9 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+api:
+  open-weather:
+    key: bef1e54f79aaad3124c47495202adc2c
+    url: https://api.openweathermap.org/data/2.5/weather
+
 
